<resources>
    <string name="app_name">JobEase</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="call">Call</string>
    <string name="hire">Hire</string>

    <string name="facebook_app_id">111241006176908</string>
    <string name="fb_login_protocol_scheme">fb1703427006620380</string>
    <string name="something_went_wrong">Something went wrong, Login canceled</string>
    <string name="phone">Phone Number</string>
    <string name="birth_date">Birth Date</string>
    <string name="done">Done</string>
    <string name="empty_field">Can not be empty</string>
    <string name="invalid_date_format">Invalid Birth Date</string>
    <string name="minor">Users must be 13+ years old</string>
    <string name="title_location_permission">Test title</string>
    <string name="text_location_permission">Texst Text brdo</string>
    <string name="ok">Ok</string>


    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="appliers">Appliers</string>
    <string name="posted_jobs">Posted Jobs</string>
    <string name="sign_out">Sign Out</string>
    <string name="set_location">Click button to support you with the nearest available tasks to your fine location</string>
    <string name="appliers_placeHolder">%1$s\nApplied</string>
    <string name="flags_placeHolder">%1$s\nReport</string>
    <string name="posts_placeHolder">%1$s\nPost</string>
    <string name="permission_granted">Location detection permission granted</string>
    <string name="please_allow">Pleas allow JobEase to detect your fine location in order to provide you with the nearest jobs available to your current physical location</string>
    <string name="permission_request">Permission Request</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="job_title">Job Title</string>
    <string name="salary">Salary</string>
    <string name="currency">Currency</string>
    <string name="address">Address</string>
    <string name="no_workers">Number Of Workers</string>
    <string name="descriotion">Description</string>
    <string name="cant_zero">Can\'t have zero workers?!</string>
    <string name="add_job">Add New Job</string>


    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>

    <string name="report">Report</string>
    <string name="rate">Rate</string>
    <string name="apply">Apply</string>
    <string name="edit_job">Edit Job</string>
    <string name="no_one">No One Applied yet :(</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">There are no jobs to view :(</string>
    <string name="check_out">Check Out</string>
    <string name="job_details">Job Details</string>
    <string name="added_successfully">Added Successfully</string>

    <string name="user_image">Job Poster</string>
    <string name="job_settings">Job Settings</string>
    <string name="check_out_button">Check Out Job</string>
    <string name="call_candidate">Call Candidate</string>
    <string name="login_fb_button">Log in JobEase using Facebook</string>
    <string name="detect_my_location">Detect my fine location</string>
    <string name="edit_my_data">Add to your personal data</string>
    <string name="add_new_job">Add New job</string>
    <string name="add_new_job_screen">Go to add new job Screen</string>
    <string name="apply_to_job">Apply to the job</string>
    <string name="applied_successfully">Applied Successfully</string>
    <string name="user_phone">User Phone, CLick to call</string>
    <string name="user_rating">User Rating</string>
    <string name="flag_user">Flag user</string>
    <string name="edit_user">Edit User</string>

    <string name="Add_mob_id">ca-app-pub-1068490261766852~2141257191</string>
    <string name="banner_add_mob_id">ca-app-pub-1068490261766852/2548451302</string>
    <string name="testing_add_mob_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="flagged_success">User Flagged Successfully</string>
    <string name="edit_success">User Editted Successfully</string>
    <string name="log_out">Log out</string>
    <string name="my_jobs">My Jobs</string>
    <string name="auth_fail">Authentication failed.</string>


</resources>
