<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jobease.www.jobease.activities.AddJobActivity">

    <include layout="@layout/main_tool_bar" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/s_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium">
        <EditText
            android:id="@+id/et_job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_title"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/s_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium">

        <EditText
            android:id="@+id/et_job_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:hint="@string/salary"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/s_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium">

        <EditText
            android:id="@+id/et_job_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/s_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium">

        <EditText
            android:id="@+id/et_job_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/s_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium">

        <EditText
            android:id="@+id/et_no_workers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_workers"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/s_300"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/medium">

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descriotion"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_job"
        style="@style/dark_lightText_button_large"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/add" />
</LinearLayout>
