<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jobease.www.jobease.fragments.AddJobFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/s_300"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium">

                <EditText
                    android:id="@+id/et_job_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/job_title"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/s_300"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium">

                <EditText
                    android:id="@+id/et_job_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/salary"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/s_300"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium">

                <EditText
                    android:id="@+id/et_job_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/currency"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/s_300"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium">

                <EditText
                    android:id="@+id/et_job_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/s_300"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium">

                <EditText
                    android:id="@+id/et_no_workers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/no_workers"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/s_300"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/medium">

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descriotion"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_add_job"
                    style="@style/dark_lightText_button_large"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/add"
                    android:contentDescription="@string/add_new_job"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btn_edit_job"
                    style="@style/dark_lightText_button_large"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/edit_job"
                    android:contentDescription="@string/edit_job"
                    android:visibility="gone" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
