<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_done"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.jobease.www.jobease.Utilities.RoundedImageView
                android:id="@+id/img_user"
                android:layout_width="@dimen/avatar_dimensions"
                android:layout_height="@dimen/avatar_dimensions"
                android:layout_marginRight="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="user Name" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/s_300"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/phone"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="@dimen/s_300"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium">

            <EditText
                android:id="@+id/et_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:hint="@string/birth_date"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_detect_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/transparent"
            android:contentDescription="@string/detect_my_location"
            android:src="@drawable/ic_detect_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_location" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_done"
        style="@style/dark_lightText_button_large"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/edit_my_data"
        android:text="@string/done" />
</RelativeLayout>